--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -2,18 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unittest.mock import Mock\n",
-    "import requests_mock\n",
+    "from typing import List, Tuple\n",
     "import os\n",
+    "from bs4 import BeautifulSoup, Tag\n",
     "import requests\n",
+    "from urllib.parse import urlparse\n",
     "import re\n",
-    "from bs4 import BeautifulSoup\n",
-    "from page_loader.utils import filter_name\n",
-    "from urllib.parse import urlparse"
+    "from page_loader.utils import filter_name, join_urls"
    ]
   },
   {
@@ -22,510 +21,230 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scrap_images(base_url: str, path: str = os.getcwd()) -> BeautifulSoup:\n",
-    "    \"\"\"\n",
-    "    Downloades page and returns html page with replaced to local copies images.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    html_page = requests.get(base_url)\n",
-    "    soup = BeautifulSoup(html_page.content, \"html.parser\")\n",
-    "    base_dir = os.path.join(path, filter_name(base_url) + \"_files\")\n",
-    "\n",
-    "    if not os.path.exists(base_dir):\n",
-    "        os.makedirs(base_dir)\n",
-    "\n",
-    "    for image in soup.find_all(\"img\"):\n",
-    "        image_url = os.path.join(base_url, image[\"src\"])\n",
-    "        response = requests.get(image_url)\n",
-    "        if response.status_code == 200:\n",
-    "\n",
-    "            path_to_save = os.path.join(base_dir, filter_name(image_url))\n",
-    "            path_to_save = re.sub(r\"-(?=[\\w]*$)\", \".\", path_to_save)\n",
-    "\n",
-    "            image[\"src\"] = path_to_save\n",
-    "\n",
-    "            file = open(f\"{path_to_save}\", \"wb\")\n",
-    "            file.write(response.content)\n",
-    "            file.close()\n",
-    "        else:\n",
-    "            raise RuntimeError(response.status_code)\n",
-    "\n",
-    "    return soup, base_dir"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = \"https://ru.hexlet.io/courses\"\n",
-    "# logger = FakeLogger()\n",
-    "\n",
     "with open(\"./fixtures/before.html\", \"r\") as f:\n",
-    "    before = BeautifulSoup(f.read(), \"html.parser\")\n",
+    "    before = f.read()\n",
     "\n",
     "with open(\"./fixtures/after.html\", \"r\") as f:\n",
-    "    after = BeautifulSoup(f.read(), \"html.parser\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"./fixtures/before.html\", \"w\") as f:\n",
-    "    f.write(before.prettify())\n",
-    "\n",
-    "with open(\"./fixtures/after.html\", \"w\") as f:\n",
-    "    f.write(after.prettify())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = before.find_all('img')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image['src'].startswith('/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_url = url + image[\"src\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://ru.hexlet.io/courses/assets/professions/python.png'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def join_urls(url1, url2):\n",
-    "    if url1.endswith('/'):\n",
-    "        url1 = url1[:-1]\n",
-    "    if url2.startswith('/'):\n",
-    "        url2 = url2[1:]\n",
-    "    return os.path.join(url1, url2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with requests_mock.Mocker() as mock:\n",
-    "    mock.register_uri('GET', url, text=str(before))\n",
-    "    mock.register_uri('GET', join_urls(url, image['src']), content=im)\n",
-    "    # mock.get(url, text=str(before))\n",
-    "    result = requests.get(url).text\n",
-    "    result2 = requests.get(join_urls(url, image['src']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('./fixtures/ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png', 'rb') as f:\n",
-    "    im = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"./fixtures/before.html\", \"r\") as f:\n",
-    "    before = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_url = \"https://ru.hexlet.io/courses\"\n",
-    "image_url = \"https://ru.hexlet.io/courses/assets/professions/python.png\"\n",
-    "path = '/tmp/tmpowaurutk/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with requests_mock.Mocker() as mock:\n",
-    "    mock.register_uri(\"GET\", base_url, text=str(before))\n",
-    "    mock.register_uri(\"GET\", image_url, content=im)\n",
-    "    html_page = requests.get(base_url)\n",
-    "    soup = BeautifulSoup(html_page.content, \"html.parser\")\n",
-    "    \n",
-    "    dir_name = filter_name(base_url) + \"_files\"\n",
-    "    dir_path = os.path.join(path, filter_name(base_url) + \"_files\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tmp/tmpowaurutk/ru-hexlet-io-courses_files'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = soup.find_all(\"img\")[0]\n",
-    "image_url = join_urls(base_url, image[\"src\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with requests_mock.Mocker() as mock:\n",
-    "    mock.register_uri(\"GET\", base_url, text=str(before))\n",
-    "    mock.register_uri(\"GET\", image_url, content=im)\n",
-    "    response = requests.get(image_url)\n",
-    "    if response.status_code == 200:\n",
-    "\n",
-    "        image_src = join_urls(\n",
-    "            urlparse(base_url).netloc.replace('.', '/'),\n",
-    "             image[\"src\"]).replace('/', '-')\n",
-    "             \n",
-    "        path_to_save = join_urls(dir_path, image_src)\n",
-    "\n",
-    "        image[\"src\"] = join_urls(dir_name, image_src)"
+    "    after = f.read()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png'"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image[\"src\"] "
+    "bsoup = BeautifulSoup(before)\n",
+    "asoup = BeautifulSoup(after)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image[\"src\"] = join_urls(dir_name, image_src)"
+    "def replace_links(\n",
+    "    soup: BeautifulSoup, base_url: str, save_dir: str\n",
+    ") -> Tuple[BeautifulSoup, List[str]]:\n",
+    "    \"\"\"Replace all links, images, css styles, scripts, etc.\n",
+    "    to local copies in beatiful soup html document.\n",
+    "\n",
+    "    Example with url = \"https://ru.hexlet.io/courses\"\n",
+    "    before:\n",
+    "        <link href=\"/assets/application.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+    "        <img alt=\"Иконка профессии Python-программист\" src=\"/assets/professions/python.png\"/>\n",
+    "    after:\n",
+    "        <link href=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-application.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+    "        <img alt=\"Иконка профессии Python-программист\"\n",
+    "        src=\"ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png\"/>\n",
+    "\n",
+    "    Args:\n",
+    "        soup (BeautifulSoup): The original document in which you need to replace the links\n",
+    "        base_url (str): Origin url for soup.\n",
+    "        save_dir (str): Where to place replaced links.\n",
+    "    Returns:\n",
+    "        Tuple[BeautifulSoup, List[str]]: Soup with replaced links, list of all replaced links\n",
+    "    \"\"\"\n",
+    "    links = []\n",
+    "\n",
+    "    for tag in soup.find_all([\"link\", \"script\", \"img\"]):\n",
+    "        link, attr = get_link(tag)\n",
+    "        if link:\n",
+    "\n",
+    "            file_ext = get_file_ext(link)\n",
+    "            link_netloc = link.replace(file_ext, \"\")\n",
+    "\n",
+    "            if link.startswith(\"/\"):\n",
+    "\n",
+    "                new_link = (\n",
+    "                    join_urls(filter_name(base_url), filter_name(link_netloc))\n",
+    "                    + file_ext\n",
+    "                )\n",
+    "\n",
+    "                link_to_save = join_urls(base_url, link)\n",
+    "                links.append(link_to_save)\n",
+    "\n",
+    "            elif urlparse(base_url).netloc == urlparse(link).netloc:\n",
+    "                new_link = filter_name(link_netloc) + file_ext\n",
+    "                links.append(link_netloc + file_ext)\n",
+    "            else:\n",
+    "                continue  # we dont need to change or save other types of links\n",
+    "\n",
+    "            tag[attr] = join_urls(save_dir, new_link)\n",
+    "\n",
+    "    return soup, links"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'ru-hexlet-io-courses_files'"
+       "(<!-- Используйте этот код в своём проекте -->\n",
+       " <!DOCTYPE html>\n",
+       " \n",
+       " <html lang=\"ru\">\n",
+       " <head>\n",
+       " <meta charset=\"utf-8\"/>\n",
+       " <title>\n",
+       "    Курсы по программированию Хекслет\n",
+       "   </title>\n",
+       " <link href=\"https://cdn2.hexlet.io/assets/menu.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+       " <link href=\"./ru-hexlet-io-courses/assets-application.css\" media=\"all\" rel=\"stylesheet\"/>\n",
+       " <link href=\"./ru-hexlet-io-courses/courses.html\" rel=\"canonical\"/>\n",
+       " </head>\n",
+       " <body>\n",
+       " <img alt=\"Иконка профессии Python-программист\" src=\"./ru-hexlet-io-courses/assets-professions-python.png\"/>\n",
+       " <img alt=\"Иконка профессии Python-ананист\" src=\"https://s7d2.scene7.com/is/image/Caterpillar/CM20180911-37279-17325\"/>\n",
+       " <h3>\n",
+       " <a href=\"/professions/python\">\n",
+       "     Python-программист\n",
+       "    </a>\n",
+       " </h3>\n",
+       " <script src=\"https://js.stripe.com/v3/\">\n",
+       " </script>\n",
+       " <script src=\"./ru-hexlet-io-packs-js-runtime.js\">\n",
+       " </script>\n",
+       " </body>\n",
+       " </html>,\n",
+       " ['https://ru.hexlet.io/courses/assets/application.css',\n",
+       "  'https://ru.hexlet.io/courses/courses',\n",
+       "  'https://ru.hexlet.io/courses/assets/professions/python.png',\n",
+       "  'https://ru.hexlet.io/packs/js/runtime.js'])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir_name"
+    "replace_links(bsoup, 'https://ru.hexlet.io/courses', '.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ru-hexlet-io-assets-professions-python.png'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image_src"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tmp/tmpowaurutk/ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_to_save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ru-hexlet-io-assets-professions-python-png'"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_name(join_urls(urlparse(base_url).netloc, image[\"src\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tmp/tmpowaurutk/ru-hexlet-io-courses_files/ru-hexlet-io-assets-professions-python.png'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_to_save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/assets/professions/python.png'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image[\"src\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/tmp/tmpowaurutk/ru-hexlet-io-courses_files/ru-hexlet-io-courses-assets-professions-python.png'"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path_to_save"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ru-hexlet-io-courses-assets-professions-python-png'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filter_name(image_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_name = 'hexlet-io'"
+    "tag = bsoup.find_all([\"link\", \"script\", \"img\"])[1]\n",
+    "link, attr = get_link(tag)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_src= dir_name + image[\"src\"]"
+    "file_ext = get_file_ext(link)\n",
+    "link_netloc = link.replace(file_ext, \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'-assets-professions-python.png'"
+       "'/assets/application'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image[\"src\"].replace('/', '-')"
+    "link_netloc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'hexlet-io/assets/professions/python.png'"
+       "'assets-application'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "image_name"
+    "filter_name(link_netloc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ru-hexlet-io-courses'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_name(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ru-hexlet-io-courses/assets-application'"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "join_urls(filter_name(url), filter_name(link_netloc))"
+   ]
   }
  ],
  "metadata": {
