--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,22 +25,15 @@
     "    before = f.read()\n",
     "\n",
     "with open(\"./fixtures/after.html\", \"r\") as f:\n",
-    "    after = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    after = f.read()\n",
+    "\n",
     "bsoup = BeautifulSoup(before)\n",
     "asoup = BeautifulSoup(after)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,109 +151,82 @@
     "tag = bsoup.find_all([\"link\", \"script\", \"img\"])[1]\n",
     "link, attr = get_link(tag)\n",
     "file_ext = get_file_ext(link)\n",
-    "link_netloc = link.replace(file_ext, \"\")\n"
+    "link_netloc = link.replace(file_ext, \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests_mock\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://ru.hexlet.io/courses'"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://ru.hexlet.io/courses/assets/application.css',\n",
-       " 'https://ru.hexlet.io/courses/courses',\n",
-       " 'https://ru.hexlet.io/courses/assets/professions/python.png',\n",
-       " 'https://ru.hexlet.io/packs/js/runtime.js']"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[i[0] for i in pairs]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'https://ru.hexlet.io/courses'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "url = 'hexlet.io'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoMockAddress",
-     "evalue": "No mock address: GET https://ru.hexlet.io/courses/assets/application.css",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoMockAddress\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m/home/qamaz/Documents/python_projects/hexlet/python-testing-project-lvl1/tests/testing.ipynb Cell 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/qamaz/Documents/python_projects/hexlet/python-testing-project-lvl1/tests/testing.ipynb#Y105sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m mock\u001b[39m.\u001b[39mregister_uri(\u001b[39m\"\u001b[39m\u001b[39mGET\u001b[39m\u001b[39m\"\u001b[39m, url, content\u001b[39m=\u001b[39m\u001b[39mb\u001b[39m\u001b[39m'\u001b[39m\u001b[39mcontent\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/qamaz/Documents/python_projects/hexlet/python-testing-project-lvl1/tests/testing.ipynb#Y105sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m link \u001b[39min\u001b[39;00m pairs:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/qamaz/Documents/python_projects/hexlet/python-testing-project-lvl1/tests/testing.ipynb#Y105sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     res \u001b[39m=\u001b[39m requests\u001b[39m.\u001b[39;49mget(link[\u001b[39m0\u001b[39;49m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/qamaz/Documents/python_projects/hexlet/python-testing-project-lvl1/tests/testing.ipynb#Y105sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     \u001b[39mprint\u001b[39m(res\u001b[39m.\u001b[39mcontent)\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests/api.py:73\u001b[0m, in \u001b[0;36mget\u001b[0;34m(url, params, **kwargs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(url, params\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[1;32m     63\u001b[0m     \u001b[39mr\u001b[39m\u001b[39m\"\"\"Sends a GET request.\u001b[39;00m\n\u001b[1;32m     64\u001b[0m \n\u001b[1;32m     65\u001b[0m \u001b[39m    :param url: URL for the new :class:`Request` object.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[39m    :rtype: requests.Response\u001b[39;00m\n\u001b[1;32m     71\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 73\u001b[0m     \u001b[39mreturn\u001b[39;00m request(\u001b[39m\"\u001b[39;49m\u001b[39mget\u001b[39;49m\u001b[39m\"\u001b[39;49m, url, params\u001b[39m=\u001b[39;49mparams, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests/api.py:59\u001b[0m, in \u001b[0;36mrequest\u001b[0;34m(method, url, **kwargs)\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[39m# By using the 'with' statement we are sure the session is closed, thus we\u001b[39;00m\n\u001b[1;32m     56\u001b[0m \u001b[39m# avoid leaving sockets open which can trigger a ResourceWarning in some\u001b[39;00m\n\u001b[1;32m     57\u001b[0m \u001b[39m# cases, and look like a memory leak in others.\u001b[39;00m\n\u001b[1;32m     58\u001b[0m \u001b[39mwith\u001b[39;00m sessions\u001b[39m.\u001b[39mSession() \u001b[39mas\u001b[39;00m session:\n\u001b[0;32m---> 59\u001b[0m     \u001b[39mreturn\u001b[39;00m session\u001b[39m.\u001b[39;49mrequest(method\u001b[39m=\u001b[39;49mmethod, url\u001b[39m=\u001b[39;49murl, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests/sessions.py:587\u001b[0m, in \u001b[0;36mSession.request\u001b[0;34m(self, method, url, params, data, headers, cookies, files, auth, timeout, allow_redirects, proxies, hooks, stream, verify, cert, json)\u001b[0m\n\u001b[1;32m    582\u001b[0m send_kwargs \u001b[39m=\u001b[39m {\n\u001b[1;32m    583\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mtimeout\u001b[39m\u001b[39m\"\u001b[39m: timeout,\n\u001b[1;32m    584\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mallow_redirects\u001b[39m\u001b[39m\"\u001b[39m: allow_redirects,\n\u001b[1;32m    585\u001b[0m }\n\u001b[1;32m    586\u001b[0m send_kwargs\u001b[39m.\u001b[39mupdate(settings)\n\u001b[0;32m--> 587\u001b[0m resp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49msend(prep, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49msend_kwargs)\n\u001b[1;32m    589\u001b[0m \u001b[39mreturn\u001b[39;00m resp\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests_mock/mocker.py:144\u001b[0m, in \u001b[0;36mMockerCore.start.<locals>._fake_send\u001b[0;34m(session, request, **kwargs)\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[39m# NOTE(jamielennox): self._last_send vs _original_send. Whilst it\u001b[39;00m\n\u001b[1;32m    134\u001b[0m \u001b[39m# seems like here we would use _last_send there is the possibility\u001b[39;00m\n\u001b[1;32m    135\u001b[0m \u001b[39m# that the user has messed up and is somehow nesting their mockers.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[39m# function so that our most recently patched send call ends up\u001b[39;00m\n\u001b[1;32m    141\u001b[0m \u001b[39m# putting in the most recent adapter. It feels funny, but it works.\u001b[39;00m\n\u001b[1;32m    143\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 144\u001b[0m     \u001b[39mreturn\u001b[39;00m _original_send(session, request, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    145\u001b[0m \u001b[39mexcept\u001b[39;00m exceptions\u001b[39m.\u001b[39mNoMockAddress:\n\u001b[1;32m    146\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreal_http:\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests/sessions.py:701\u001b[0m, in \u001b[0;36mSession.send\u001b[0;34m(self, request, **kwargs)\u001b[0m\n\u001b[1;32m    698\u001b[0m start \u001b[39m=\u001b[39m preferred_clock()\n\u001b[1;32m    700\u001b[0m \u001b[39m# Send the request\u001b[39;00m\n\u001b[0;32m--> 701\u001b[0m r \u001b[39m=\u001b[39m adapter\u001b[39m.\u001b[39;49msend(request, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m    703\u001b[0m \u001b[39m# Total elapsed time of the request (approximately)\u001b[39;00m\n\u001b[1;32m    704\u001b[0m elapsed \u001b[39m=\u001b[39m preferred_clock() \u001b[39m-\u001b[39m start\n",
-      "File \u001b[0;32m~/Documents/python_projects/hexlet/python-testing-project-lvl1/.venv/lib/python3.8/site-packages/requests_mock/adapter.py:261\u001b[0m, in \u001b[0;36mAdapter.send\u001b[0;34m(self, request, **kwargs)\u001b[0m\n\u001b[1;32m    256\u001b[0m         logger\u001b[39m.\u001b[39mdebug(\u001b[39m'\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(request\u001b[39m.\u001b[39m_request\u001b[39m.\u001b[39mmethod,\n\u001b[1;32m    257\u001b[0m                                        request\u001b[39m.\u001b[39m_request\u001b[39m.\u001b[39murl,\n\u001b[1;32m    258\u001b[0m                                        resp\u001b[39m.\u001b[39mstatus_code))\n\u001b[1;32m    259\u001b[0m         \u001b[39mreturn\u001b[39;00m resp\n\u001b[0;32m--> 261\u001b[0m \u001b[39mraise\u001b[39;00m exceptions\u001b[39m.\u001b[39mNoMockAddress(request)\n",
-      "\u001b[0;31mNoMockAddress\u001b[0m: No mock address: GET https://ru.hexlet.io/courses/assets/application.css"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'content'\n",
+      "b'content'\n",
+      "b'content'\n",
+      "b'content'\n"
      ]
     }
    ],
    "source": [
     "with requests_mock.Mocker() as mock:\n",
-    "    mock.register_uri(\"GET\", url, content=b'content')\n",
+    "    matcher = re.compile(urlparse(url).netloc)\n",
+    "    mock.register_uri(\"GET\", matcher, content=b'content')\n",
     "    for link in pairs:\n",
     "        res = requests.get(link[0])\n",
     "        print(res.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from page_loader.utils import get_soup\n",
+    "from page_loader.scrap import replace_links, download_links\n",
+    "import os\n",
+    "url = 'https://books.toscrape.com/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = get_soup(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup, pairs = replace_links(soup, url, os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs"
    ]
   },
   {
