--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,14 @@
     "    after = f.read()\n",
     "\n",
     "bsoup = BeautifulSoup(before)\n",
-    "asoup = BeautifulSoup(after)"
+    "asoup = BeautifulSoup(after)\n",
+    "\n",
+    "url = 'https://ru.hexlet.io/courses'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,22 +97,88 @@
     "            link_netloc = link.replace(file_ext, \"\")\n",
     "            url_netloc = urlparse(base_url).netloc\n",
     "\n",
-    "            if link.startswith(\"/\"):\n",
+    "            if url_netloc == urlparse(link).netloc:\n",
+    "                new_link = filter_name(link_netloc) + file_ext\n",
+    "                links.append((link_netloc + file_ext, new_link))\n",
+    "\n",
+    "            elif not link.startswith(\"http\"):\n",
     "\n",
     "                new_link = filter_name(join_urls(url_netloc, link_netloc)) + file_ext\n",
     "\n",
-    "                link_to_save = join_urls(base_url, link)\n",
+    "                link_to_save = join_urls(urlparse(base_url).scheme, url_netloc, link_netloc)\n",
+    "                print(link_to_save, link_netloc)\n",
+    "\n",
     "                links.append((link_to_save, new_link))\n",
     "\n",
-    "            elif url_netloc == urlparse(link).netloc:\n",
-    "                new_link = filter_name(link_netloc) + file_ext\n",
-    "                links.append((link_netloc + file_ext, new_link))\n",
     "            else:\n",
     "                continue  # we dont need to change or save other types of links\n",
     "            save_dir = filter_name(base_url) + \"_files\"\n",
     "            tag[attr] = join_urls(save_dir, new_link)\n",
     "\n",
     "    return soup, links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "replace_links(bsoup, url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s, links = _"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ru.hexlet.io/assets/application', 'ru-hexlet-io-assets-application.css'),\n",
+       " ('ru.hexlet.io/courses', 'ru-hexlet-io-courses.html'),\n",
+       " ('ru.hexlet.io/assets/professions/python',\n",
+       "  'ru-hexlet-io-assets-professions-python.png'),\n",
+       " ('https://ru.hexlet.io/packs/js/runtime.js',\n",
+       "  'ru-hexlet-io-packs-js-runtime.js')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ParseResult(scheme='https', netloc='ru.hexlet.io', path='/packs/js/runtime.js', params='', query='', fragment='')"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlparse('https://ru.hexlet.io/packs/js/runtime.js')"
    ]
   },
   {
